--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -529,61 +529,60 @@ async function directBuy(e){
     return;
   }
 
+  if(!currentRetailerLoc || !currentWholesalerLoc){
+    alert("📍 Location missing. Please calculate delivery first");
+    return;
+  }
+
   const vehicle = vehicleType.value;
   if(!vehicle){
     alert("🚚 Select vehicle first");
     return;
   }
 
-  const retailerProfile = JSON.parse(
-    localStorage.getItem("retailerProfile") || "{}"
-  );
+  const retailerProfile =
+    JSON.parse(localStorage.getItem("retailerProfile") || "{}");
 
   if(!retailerProfile.mobile){
     alert("👤 Please save retailer profile first");
     return;
   }
 
-  const delivery = lastDeliveryCharge;
-  const total = selectedProduct.price + delivery;
+  const total =
+    Number(selectedProduct.price) + Number(lastDeliveryCharge);
+
   try{
     const res = await fetch(`${API}/api/orders/pay-and-create`,{
       method:"POST",
       headers:{ "Content-Type":"application/json" },
       body: JSON.stringify({
-  amount: total,
-  notes: {
-    type: "direct",
+        amount: total,
+        notes:{
+          type:"direct",
 
-    productId: selectedProduct._id,
-    productName: selectedProduct.productName,
-    price: selectedProduct.price,
-    image: selectedProduct.images?.[0] || "",
+          productId: selectedProduct._id,
+          productName: selectedProduct.productName,
+          productImg: selectedProduct.images?.[0] || "",
+          price: selectedProduct.price,
 
-    // 🏪 Wholesaler info
-    wholesalerId: selectedProduct.wholesalerId,
-    wholesalerName: selectedProduct.shopName,
-    wholesalerMobile: selectedProduct.mobile,
-    wholesalerAddress: selectedProduct.address,
+          wholesalerId: selectedProduct.wholesalerId,
+          wholesalerName: selectedProduct.shopName,
+          wholesalerMobile: selectedProduct.mobile,
 
-    // ✅ WHOLESALER CURRENT LOCATION
-    wholesalerLocation: wholesalerLoc,
+          wholesalerLocation: currentWholesalerLoc,   // ✅ FIXED
 
-    // 🏬 Retailer info
-    retailerName: retailerProfile.name,
-    retailerMobile: retailerProfile.mobile,
-    retailerAddress: retailerProfile.address,
+          retailerName: retailerProfile.name,
+          retailerMobile: retailerProfile.mobile,
 
-    // ✅ RETAILER CURRENT LOCATION
-    retailerLocation: retailerLoc,
+          retailerLocation: currentRetailerLoc,       // ✅ FIXED
 
-    vehicleType: vehicle,
+          vehicleType: vehicle,
 
-    totalDelivery: lastDeliveryCharge,
-    retailerPays: lastDeliveryCharge,
-    wholesalerPays: 0
-  }
-})
+          totalDelivery: lastDeliveryCharge,
+          retailerPays: lastDeliveryCharge,
+          wholesalerPays: 0
+        }
+      })
     });
 
     const data = await res.json();
@@ -598,13 +597,13 @@ async function directBuy(e){
       currency: "INR",
       order_id: data.order.id,
 
-      handler: function(){
+      handler(){
         alert("✅ Payment Successful 🎉");
         closeAll();
       },
 
       modal:{
-        ondismiss:function(){
+        ondismiss(){
           alert("❌ Payment cancelled");
         }
       }
@@ -613,7 +612,7 @@ async function directBuy(e){
     rzp.open();
 
   }catch(err){
-    console.error(err);
+    console.error("Payment Error:", err);
     alert("❌ Payment error");
   }
 }
