--- a/wholesaler.html
+++ b/wholesaler.html
@@ -757,7 +757,7 @@ async function loadOrders(){
     <div class="card">
       <b>${o.productName}</b> ₹${o.price}<br>
 
-      🏬 Retailer: ${o.retailerName} | 📞 ${o.retailerMobile}<br>
+      🏬 Retailer Shop Name (short address): ${o.retailerName} | 📞 ${o.retailerMobile}<br>
       📍 ${o.retailerAddress}<br><br>
 
       🚚 Vehicle: ${o.vehicleType || "Not assigned"}<br>
