--- a/wholesaler.html
+++ b/wholesaler.html
@@ -140,9 +140,9 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
   <div class="modal-content">
     <h3>Shop Profile</h3>
 
-    <input id="shopName" placeholder="Shop Name">
+    <input id="shopName" placeholder="Shop Name (Short address)">
     <input id="shopMobile" placeholder="UPI / Mobile Number">
-    <textarea id="shopAddress" placeholder="Shop Address"></textarea>
+    
 
     <!-- 📍 LOCATION (INSIDE PROFILE) -->
     <div class="location-box">
