--- a/retailer.html
+++ b/retailer.html
@@ -512,9 +512,9 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
   <div class="modal-content">
     <h3>Retailer Profile</h3>
 
-    <input id="profileName" placeholder="Name">
+    <input id="profileName" placeholder="Shop Name (Short address)">
     <input id="profileMobile" placeholder="Mobile">
-    <textarea id="profileAddress" placeholder="Address"></textarea>
+    
 
     <!-- ✅ Current Location (Modified) -->
 <div class="location-group">
