--- a/wholesaler.html
+++ b/wholesaler.html
@@ -757,8 +757,8 @@ async function loadOrders(){
     <div class="card">
       <b>${o.productName}</b> ₹${o.price}<br>
 
-      🏬 Retailer Shop: ${o.retailerName} | 📞 ${o.retailerMobile}<br>
-      
+      🏬 Retailer Shop: ${o.retailerName}<br>
+      📞 ${o.retailerMobile}<br>
 
       🚚 Vehicle: ${o.vehicleType || "Not assigned"}<br>
 
