--- a/wholesaler.html
+++ b/wholesaler.html
@@ -142,7 +142,7 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
 
     <input id="shopName" placeholder="Shop Name (Short address)">
     <input id="shopMobile" placeholder="UPI / Mobile Number">
-    
+    <input id="shopAddress" placeholder="Shop Address">
 
     <!-- 📍 LOCATION (INSIDE PROFILE) -->
     <div class="location-box">
