--- a/wholesaler.html
+++ b/wholesaler.html
@@ -257,7 +257,7 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
   Notification.requestPermission().then(permission => {
     if (permission === "granted") {
       getToken(messaging, {
-        vapidKey: "👉👉 YAHAN_APNA_VAPID_KEY_DALO 👈👈"
+        vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s"
       }).then(token => {
         if (token) {
           console.log("🔔 FCM Token:", token);
