--- a/delivery.html
+++ b/delivery.html
@@ -506,7 +506,7 @@ setInterval(setLiveLocation, 15000);
   Notification.requestPermission().then(permission => {
     if(permission === "granted"){
       getToken(messaging, {
-        vapidKey: "👉👉 YAHAN_APNA_VAPID_KEY_DALO 👈👈"
+        vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s"
       }).then(token => {
         if(token){
           console.log("🔔 FCM Token:", token);
