--- a/delivery.html
+++ b/delivery.html
@@ -486,7 +486,7 @@ function closeCodeModal(){ codeModal.style.display="none"; }
 loadOrders();
 setInterval(loadOrders,8000);
 setInterval(setLiveLocation, 15000); 
-</script> <!-- 🔥 FIREBASE SDK -->
+</script> <!-- 🔥 FIREBASE SDK & MESSAGING -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
   import { getMessaging, getToken, onMessage } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging.js";
@@ -500,39 +500,61 @@ setInterval(setLiveLocation, 15000);
     appId: "1:603669325846:web:00f3ccff7fa977bf542d37"
   };
 
+  // 🔹 INIT FIREBASE
   const app = initializeApp(firebaseConfig);
   const messaging = getMessaging(app);
 
-  Notification.requestPermission().then(permission => {
-    if(permission === "granted"){
-      getToken(messaging, {
-        vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s"
-      }).then(token => {
-        if(token){
-          console.log("🔔 FCM Token:", token);
+  // 🔹 REGISTER SERVICE WORKER
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/firebase-messaging-sw.js')
+      .then(registration => {
+        console.log("✅ Service Worker registered:", registration);
 
-          // Backend ko token bhejo
-          fetch(`${API}/api/notifications/saveToken`,{
-            method:"POST",
-            headers:{
-              "Content-Type":"application/json",
-              "Authorization":"Bearer "+TOKEN
-            },
-            body: JSON.stringify({
-              userId: DBID,
-              role: "delivery",    // ✅ DELIVERY BOY ROLE
-              fcmToken: token
-            })
-          });
-        }
+        // 🔹 GET FCM TOKEN
+        Notification.requestPermission().then(permission => {
+          if(permission === "granted"){
+            getToken(messaging, {
+              vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s",
+              serviceWorkerRegistration: registration
+            }).then(token => {
+              if(token){
+                console.log("🔔 FCM Token:", token);
+
+                // ✅ Send token to backend
+                fetch(`${API}/api/notifications/saveToken`,{
+                  method:"POST",
+                  headers:{
+                    "Content-Type":"application/json",
+                    "Authorization":"Bearer "+TOKEN
+                  },
+                  body: JSON.stringify({
+                    userId: DBID,
+                    role: "delivery",
+                    fcmToken: token
+                  })
+                });
+              }else{
+                console.warn("⚠️ FCM Token not generated. Check HTTPS & permissions.");
+              }
+            }).catch(err=>{
+              console.error("⚠️ getToken error:", err);
+            });
+          } else {
+            console.warn("⚠️ Notification permission not granted");
+          }
+        });
+
+      }).catch(err => {
+        console.error("❌ Service Worker registration failed:", err);
       });
-    }
-  });
+  } else {
+    console.warn("⚠️ Service Worker not supported");
+  }
 
-  // Foreground notification
+  // 🔹 FOREGROUND NOTIFICATIONS
   onMessage(messaging, payload => {
-    alert("📩 New Order: " + payload.notification.title);
-    loadOrders(); // notification aate hi orders refresh
+    alert("📩 New Order: " + payload.notification?.title);
+    loadOrders(); // refresh orders
   });
-</script> </body>  
+</script></body>  
 </html>
