--- a/wholesaler.html
+++ b/wholesaler.html
@@ -251,53 +251,68 @@ if ("serviceWorker" in navigator) {
 </script>
  <!-- 🔥 FIREBASE SDK -->
  <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-  import { getMessaging, getToken, onMessage } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getMessaging, getToken, onMessage } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyBioiLSE3HyZh49yJv93MwnQFrmAm6wJ5g",
-    authDomain: "shop-ab586.firebaseapp.com",
-    projectId: "shop-ab586",
-    storageBucket: "shop-ab586.firebasestorage.app",
-    messagingSenderId: "603669325846",
-    appId: "1:603669325846:web:00f3ccff7fa977bf542d37"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyBioiLSE3HyZh49yJv93MwnQFrmAm6wJ5g",
+  authDomain: "shop-ab586.firebaseapp.com",
+  projectId: "shop-ab586",
+  storageBucket: "shop-ab586.firebasestorage.app",
+  messagingSenderId: "603669325846",
+  appId: "1:603669325846:web:00f3ccff7fa977bf542d37"
+};
 
-  // 🔹 Init Firebase
-  const app = initializeApp(firebaseConfig);
-  const messaging = getMessaging(app);
+const app = initializeApp(firebaseConfig);
+const messaging = getMessaging(app);
 
-  // 🔹 Permission + Token
-  Notification.requestPermission().then(permission => {
-    if (permission === "granted") {
-      getToken(messaging, {
-        vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s"
-      }).then(token => {
-        if (token) {
-          console.log("🔔 FCM Token:", token);
+// 🔹 Service Worker Registration
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("/firebase-messaging-sw.js")
+    .then(reg => console.log("✅ Service Worker Registered:", reg.scope))
+    .catch(err => console.error("❌ Service Worker Error:", err));
+}
 
-          // 🔥 BACKEND ko token bhejo
-          fetch(`${API}/api/notifications/saveToken`, {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-              "Authorization": "Bearer " + localStorage.getItem("token")
-            },
-            body: JSON.stringify({
-              userId: localStorage.getItem("userId"),
-              role: "wholesaler",
-              fcmToken: token
-            })
-          });
-        }
+// 🔹 Request Notification Permission + FCM Token
+async function initFCM() {
+  try {
+    const permission = await Notification.requestPermission();
+    if(permission !== "granted") return console.error("Notifications not allowed");
+
+    const token = await getToken(messaging, {
+      vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s"
+    });
+
+    console.log("🔔 FCM Token:", token);
+
+    if(token) {
+      // 🔹 Save Token to Backend
+      const API = "https://shopbacked-vmhs.onrender.com";
+      await fetch(`${API}/api/notifications/saveToken`, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Authorization": "Bearer " + localStorage.getItem("token")
+        },
+        body: JSON.stringify({
+          userId: localStorage.getItem("userId"),
+          role: "wholesaler",
+          fcmToken: token
+        })
       });
     }
-  });
 
-  // 🔔 Foreground notification
-  onMessage(messaging, payload => {
-    alert("🔔 New Order: " + payload.notification.title);
-  });
+  } catch(err) {
+    console.error("FCM Init Error:", err);
+  }
+}
+
+initFCM();
+
+// 🔔 Foreground messages
+onMessage(messaging, payload => {
+  alert("🔔 New Order: " + payload.notification.title);
+});
 </script>
  
  <script>    
