--- a/wholesaler.html
+++ b/wholesaler.html
@@ -268,7 +268,7 @@ const messaging = getMessaging(app);
 
 // 🔹 Service Worker Registration
 if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("/firebase-messaging-sw.js")
+  navigator.serviceWorker.register("./firebase-messaging-sw.js")
     .then(reg => console.log("✅ Service Worker Registered:", reg.scope))
     .catch(err => console.error("❌ Service Worker Error:", err));
 }
