--- a/wholesaler.html
+++ b/wholesaler.html
@@ -238,19 +238,9 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
  <script>
   const API = "https://shopbacked-vmhs.onrender.com";
  </script>
-<script>
-if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("/firebase-messaging-sw.js")
-    .then(reg => {
-      console.log("✅ Service Worker Registered", reg.scope);
-    })
-    .catch(err => {
-      console.error("❌ Service Worker Register Error", err);
-    });
-}
-</script>
+
  <!-- 🔥 FIREBASE SDK -->
- <script type="module">
+<script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getMessaging, getToken, onMessage } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging.js";
 
@@ -258,7 +248,6 @@ const firebaseConfig = {
   apiKey: "AIzaSyBioiLSE3HyZh49yJv93MwnQFrmAm6wJ5g",
   authDomain: "shop-ab586.firebaseapp.com",
   projectId: "shop-ab586",
-  storageBucket: "shop-ab586.firebasestorage.app",
   messagingSenderId: "603669325846",
   appId: "1:603669325846:web:00f3ccff7fa977bf542d37"
 };
@@ -266,50 +255,39 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const messaging = getMessaging(app);
 
-// 🔹 Service Worker Registration
-if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("./firebase-messaging-sw.js")
-    .then(reg => console.log("✅ Service Worker Registered:", reg.scope))
-    .catch(err => console.error("❌ Service Worker Error:", err));
-}
+// ✅ ROOT SERVICE WORKER
+navigator.serviceWorker.register("/firebase-messaging-sw.js")
+  .then(() => console.log("✅ SW registered"))
+  .catch(err => console.error("❌ SW error", err));
 
-// 🔹 Request Notification Permission + FCM Token
 async function initFCM() {
-  try {
-    const permission = await Notification.requestPermission();
-    if(permission !== "granted") return console.error("Notifications not allowed");
-
-    const token = await getToken(messaging, {
-      vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s"
-    });
-
-    console.log("🔔 FCM Token:", token);
-
-    if(token) {
-      // 🔹 Save Token to Backend
-      const API = "https://shopbacked-vmhs.onrender.com";
-      await fetch(`${API}/api/notifications/saveToken`, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": "Bearer " + localStorage.getItem("token")
-        },
-        body: JSON.stringify({
-          userId: localStorage.getItem("userId"),
-          role: "wholesaler",
-          fcmToken: token
-        })
-      });
-    }
-
-  } catch(err) {
-    console.error("FCM Init Error:", err);
+  const permission = await Notification.requestPermission();
+  if (permission !== "granted") {
+    console.log("❌ Notification blocked");
+    return;
   }
+
+  const token = await getToken(messaging, {
+    vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s"
+  });
+
+  console.log("🔥 FCM TOKEN =", token);
+
+  if (!token) return;
+
+  await fetch("https://shopbacked-vmhs.onrender.com/api/notifications/saveToken", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      userId: localStorage.getItem("userId"),
+      role: "wholesaler",
+      fcmToken: token
+    })
+  });
 }
 
 initFCM();
 
-// 🔔 Foreground messages
 onMessage(messaging, payload => {
   alert("🔔 New Order: " + payload.notification.title);
 });
