--- a/index.html
+++ b/index.html
@@ -174,40 +174,76 @@ async function signupUser(type,data){
   }catch(err){ alert("Server error: "+err.message); }
 }
 
-async function loginUser(type,mobile,password){
-  try{
-    const res = await fetch(`${SERVER_URL}/api/login`,{
-      method:'POST',
-      headers:{'Content-Type':'application/json'},
-      body:JSON.stringify({mobile,password,role:type})
+// Firebase Messaging setup (add ye script pehle load ho, firebase config ke baad)
+import { getMessaging, getToken } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging.js";
+
+const messaging = getMessaging(app);
+
+async function getFCMToken() {
+  try {
+    const fcmToken = await getToken(messaging, {
+      vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s"
     });
-    const json = await res.json();
-    if(json.success){
-      localStorage.setItem("token",json.token);
-      localStorage.setItem("userId",json.userId);
-      localStorage.setItem("role",type);
-      window.location.href = type+".html";
-    } else { alert(json.message); }
-  }catch(err){ alert("Server error: "+err.message); }
+    console.log("FCM Token:", fcmToken);
+    return fcmToken;
+  } catch (err) {
+    console.error("FCM token error:", err);
+    return null;
+  }
 }
 
-['wholesaler','retailer','delivery','admin'].forEach(type=>{
-  document.querySelector(`#${type}-signup .submit`).onclick=()=>{
-    let data={};
-    document.querySelectorAll(`#${type}-signup input, #${type}-signup select`).forEach(i=>{
-      if(i.type==='file') return;
-      let key=i.placeholder?i.placeholder.replace(/ /g,'_').toLowerCase():"vehicle";
-      data[key]=i.value;
+// Login function
+async function loginUser(type, mobile, password) {
+  try {
+    const res = await fetch(`${SERVER_URL}/api/login`, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ mobile, password, role: type })
     });
-    if(data.password!==data.confirm_password){ alert('Password mismatch'); return; }
-    signupUser(type,data);
+    const json = await res.json();
+
+    if (json.success) {
+      localStorage.setItem("token", json.token);
+      localStorage.setItem("userId", json.userId);
+      localStorage.setItem("role", type);
+
+      // ✅ FCM token get aur server pe save
+      const fcmToken = await getFCMToken();
+      if (fcmToken) {
+        await fetch(`${SERVER_URL}/api/notifications/saveToken`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ userId: json.userId, role: type, fcmToken })
+        });
+      }
+
+      window.location.href = type + ".html";
+    } else {
+      alert(json.message || "Login failed");
+    }
+  } catch (err) {
+    alert("Server error: " + err.message);
+  }
+}
+
+// Signup & login click handlers (aapka existing structure same)
+['wholesaler','retailer','delivery','admin'].forEach(type => {
+  document.querySelector(`#${type}-signup .submit`).onclick = () => {
+    let data = {};
+    document.querySelectorAll(`#${type}-signup input, #${type}-signup select`).forEach(i => {
+      if (i.type === 'file') return;
+      let key = i.placeholder ? i.placeholder.replace(/ /g,'_').toLowerCase() : "vehicle";
+      data[key] = i.value;
+    });
+    if (data.password !== data.confirm_password) { alert('Password mismatch'); return; }
+    signupUser(type, data);
   };
-  
-  document.querySelector(`#${type}-login .submit`).onclick=()=>{
-    let m=document.querySelector(`#${type}-login input`).value;
-    let p=document.querySelectorAll(`#${type}-login input`)[1].value;
-    if(!m || !p){ alert('Fill all fields'); return; }
-    loginUser(type,m,p);
+
+  document.querySelector(`#${type}-login .submit`).onclick = () => {
+    let m = document.querySelector(`#${type}-login input`).value;
+    let p = document.querySelectorAll(`#${type}-login input`)[1].value;
+    if (!m || !p) { alert('Fill all fields'); return; }
+    loginUser(type, m, p);
   };
 });
 </script>
