--- a/index.html
+++ b/index.html
@@ -173,14 +173,29 @@ async function signupUser(type,data){
     } else { alert(json.message); }
   }catch(err){ alert("Server error: "+err.message); }
 }
-
+async function requestNotificationPermission() {
+  try {
+    const permission = await Notification.requestPermission();
+    if (permission === 'granted') {
+      console.log("Notification permission granted.");
+      return true;
+    } else {
+      console.warn("Notification permission denied.");
+      return false;
+    }
+  } catch(err) {
+    console.error("Permission error:", err);
+    return false;
+  }
+    }
 // Firebase Messaging setup (add ye script pehle load ho, firebase config ke baad)
 import { getMessaging, getToken } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging.js";
 
-const messaging = getMessaging(app);
-
 async function getFCMToken() {
   try {
+    const permissionGranted = await requestNotificationPermission();
+    if (!permissionGranted) return null;
+
     const fcmToken = await getToken(messaging, {
       vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s"
     });
