--- a/index.html
+++ b/index.html
@@ -139,23 +139,63 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
     </div>
 </div>
 
-<script>
+<!-- Script with module type -->
+<script type="module">
 const SERVER_URL = "https://shopbacked-vmhs.onrender.com";
 
-window.onload = ()=> showPanel('wholesaler');
+// Firebase imports
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+import { getMessaging, getToken } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging.js";
 
+// Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyBioiLSE3HyZh49yJv93MwnQFrmAm6wJ5g",
+  authDomain: "shop-ab586.firebaseapp.com",
+  projectId: "shop-ab586",
+  storageBucket: "shop-ab586.firebasestorage.app",
+  messagingSenderId: "603669325846",
+  appId: "1:603669325846:web:00f3ccff7fa977bf542d37",
+  measurementId: "G-3NXBL04EP2"
+};
+
+// Init Firebase & Messaging
+const app = initializeApp(firebaseConfig);
+const messaging = getMessaging(app);
+
+// Notifications
+async function requestNotificationPermission() {
+  try {
+    const permission = await Notification.requestPermission();
+    return permission === 'granted';
+  } catch(err) { console.error(err); return false; }
+}
+
+async function getFCMToken() {
+  try {
+    const granted = await requestNotificationPermission();
+    if (!granted) return null;
+    const token = await getToken(messaging, {
+      vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s"
+    });
+    console.log("FCM Token:", token);
+    return token;
+  } catch(err) { console.error(err); return null; }
+}
+
+// Panel switching
+window.onload = () => showPanel('wholesaler');
 function showPanel(panelId){
   document.querySelectorAll('.panel').forEach(p=>p.style.display='none');
   document.getElementById(panelId).style.display='block';
   switchTab(panelId,'signup');
 }
-
 function switchTab(panel, tab){
   document.getElementById(panel+'-signup').classList.toggle('active',tab==='signup');
   document.getElementById(panel+'-login').classList.toggle('active',tab==='login');
   document.querySelectorAll('#'+panel+' .tab').forEach((t,i)=>t.classList.toggle('active', i === (tab==='signup'?0:1)));
 }
 
+// Signup & Login functions
 async function signupUser(type,data){
   try{
     const res = await fetch(`${SERVER_URL}/api/signup`,{
@@ -170,97 +210,58 @@ async function signupUser(type,data){
       localStorage.setItem("role",type);
       alert(type+" signup success");
       window.location.href = type+".html";
-    } else { alert(json.message); }
+    } else alert(json.message);
   }catch(err){ alert("Server error: "+err.message); }
 }
-async function requestNotificationPermission() {
-  try {
-    const permission = await Notification.requestPermission();
-    if (permission === 'granted') {
-      console.log("Notification permission granted.");
-      return true;
-    } else {
-      console.warn("Notification permission denied.");
-      return false;
-    }
-  } catch(err) {
-    console.error("Permission error:", err);
-    return false;
-  }
-    }
-// Firebase Messaging setup (add ye script pehle load ho, firebase config ke baad)
-import { getMessaging, getToken } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging.js";
 
-async function getFCMToken() {
-  try {
-    const permissionGranted = await requestNotificationPermission();
-    if (!permissionGranted) return null;
-
-    const fcmToken = await getToken(messaging, {
-      vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s"
-    });
-    console.log("FCM Token:", fcmToken);
-    return fcmToken;
-  } catch (err) {
-    console.error("FCM token error:", err);
-    return null;
-  }
-}
-
-// Login function
-async function loginUser(type, mobile, password) {
-  try {
-    const res = await fetch(`${SERVER_URL}/api/login`, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ mobile, password, role: type })
+async function loginUser(type, mobile, password){
+  try{
+    const res = await fetch(`${SERVER_URL}/api/login`,{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({mobile,password,role:type})
     });
     const json = await res.json();
-
-    if (json.success) {
+    if(json.success){
       localStorage.setItem("token", json.token);
       localStorage.setItem("userId", json.userId);
       localStorage.setItem("role", type);
 
-      // ✅ FCM token get aur server pe save
+      // ✅ FCM save
       const fcmToken = await getFCMToken();
-      if (fcmToken) {
-        await fetch(`${SERVER_URL}/api/notifications/saveToken`, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ userId: json.userId, role: type, fcmToken })
+      if(fcmToken){
+        await fetch(`${SERVER_URL}/api/notifications/saveToken`,{
+          method:'POST',
+          headers:{'Content-Type':'application/json'},
+          body:JSON.stringify({ userId: json.userId, role: type, fcmToken })
         });
       }
 
       window.location.href = type + ".html";
-    } else {
-      alert(json.message || "Login failed");
-    }
-  } catch (err) {
-    alert("Server error: " + err.message);
-  }
+    } else alert(json.message || "Login failed");
+  } catch(err){ alert("Server error: "+err.message); }
 }
 
-// Signup & login click handlers (aapka existing structure same)
+// Attach handlers
 ['wholesaler','retailer','delivery','admin'].forEach(type => {
   document.querySelector(`#${type}-signup .submit`).onclick = () => {
     let data = {};
-    document.querySelectorAll(`#${type}-signup input, #${type}-signup select`).forEach(i => {
-      if (i.type === 'file') return;
-      let key = i.placeholder ? i.placeholder.replace(/ /g,'_').toLowerCase() : "vehicle";
+    document.querySelectorAll(`#${type}-signup input, #${type}-signup select`).forEach(i=>{
+      if(i.type==='file') return;
+      let key = i.placeholder? i.placeholder.replace(/ /g,'_').toLowerCase():"vehicle";
       data[key] = i.value;
     });
-    if (data.password !== data.confirm_password) { alert('Password mismatch'); return; }
-    signupUser(type, data);
+    if(data.password!==data.confirm_password){ alert('Password mismatch'); return; }
+    signupUser(type,data);
   };
 
   document.querySelector(`#${type}-login .submit`).onclick = () => {
     let m = document.querySelector(`#${type}-login input`).value;
     let p = document.querySelectorAll(`#${type}-login input`)[1].value;
-    if (!m || !p) { alert('Fill all fields'); return; }
-    loginUser(type, m, p);
+    if(!m || !p){ alert('Fill all fields'); return; }
+    loginUser(type,m,p);
   };
 });
 </script>
 </body>
-</html>
+    </html>
