--- a/index.html
+++ b/index.html
@@ -128,76 +128,127 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
     </form>  
 </div>
 
-</div>  <script>  
-const SERVER_URL = "https://shopbacked-vmhs.onrender.com";  
-  
-window.onload = ()=> showPanel('wholesaler');  
-  
-function showPanel(panelId){  
-  document.querySelectorAll('.panel').forEach(p=>p.style.display='none');  
-  document.getElementById(panelId).style.display='block';  
-  switchTab(panelId,'signup');  
-}  
-  
-function switchTab(panel, tab){  
-  document.getElementById(panel+'-signup').classList.toggle('active',tab==='signup');  
-  document.getElementById(panel+'-login').classList.toggle('active',tab==='login');  
-  document.querySelectorAll('#'+panel+' .tab').forEach((t,i)=>t.classList.toggle('active', i === (tab==='signup'?0:1)));  
-}  
-  
-async function signupUser(type,data){  
-  try{  
-    const res = await fetch(`${SERVER_URL}/api/signup`,{  
-      method:'POST',  
-      headers:{'Content-Type':'application/json'},  
-      body:JSON.stringify({...data,role:type})  
-    });  
-    const json = await res.json();  
-    if(json.success){  
-      localStorage.setItem("token",json.token);  
-      localStorage.setItem("userId",json.userId);  
-      localStorage.setItem("role",type);  
-      alert(type+" signup success");  
-      window.location.href = type+".html";  
-    } else { alert(json.message); }  
-  }catch(err){ alert("Server error: "+err.message); }  
-}  
-  
-async function loginUser(type,mobile,password){  
-  try{  
-    const res = await fetch(`${SERVER_URL}/api/login`,{  
-      method:'POST',  
-      headers:{'Content-Type':'application/json'},  
-      body:JSON.stringify({mobile,password,role:type})  
-    });  
-    const json = await res.json();  
-    if(json.success){  
-      localStorage.setItem("token",json.token);  
-      localStorage.setItem("userId",json.userId);  
-      localStorage.setItem("role",type);  
-      window.location.href = type+".html";  
-    } else { alert(json.message); }  
-  }catch(err){ alert("Server error: "+err.message); }  
-}  
-  
-['wholesaler','retailer','delivery','admin'].forEach(type=>{  
-  document.querySelector(`#${type}-signup .submit`).onclick=()=>{  
-    let data={};  
-    document.querySelectorAll(`#${type}-signup input, #${type}-signup select`).forEach(i=>{  
-      if(i.type==='file') return;  
-      let key=i.placeholder?i.placeholder.replace(/ /g,'_').toLowerCase():"vehicle";  
-      data[key]=i.value;  
-    });  
-    if(data.password!==data.confirm_password){ alert('Password mismatch'); return; }  
-    signupUser(type,data);  
-  };  
-    
-  document.querySelector(`#${type}-login .submit`).onclick=()=>{  
-    let m=document.querySelector(`#${type}-login input`).value;  
-    let p=document.querySelectorAll(`#${type}-login input`)[1].value;  
-    if(!m || !p){ alert('Fill all fields'); return; }  
-    loginUser(type,m,p);  
-  };  
-});  
+</div>  <script type="module">
+/* ================= FIREBASE ================= */
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+import { getMessaging, getToken } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyBioiLSE3HyZh49yJv93MwnQFrmAm6wJ5g",
+  authDomain: "shop-ab586.firebaseapp.com",
+  projectId: "shop-ab586",
+  messagingSenderId: "603669325846",
+  appId: "1:603669325846:web:00f3ccff7fa977bf542d37"
+};
+
+const app = initializeApp(firebaseConfig);
+const messaging = getMessaging(app);
+
+const VAPID_KEY = "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s";
+
+/* ================= SERVER ================= */
+const SERVER_URL = "https://shopbacked-vmhs.onrender.com";
+
+/* ================= UI ================= */
+window.onload = ()=> showPanel('wholesaler');
+
+window.showPanel = (panelId)=>{
+  document.querySelectorAll('.panel').forEach(p=>p.style.display='none');
+  document.getElementById(panelId).style.display='block';
+  switchTab(panelId,'signup');
+};
+
+window.switchTab = (panel, tab)=>{
+  document.getElementById(panel+'-signup').classList.toggle('active',tab==='signup');
+  document.getElementById(panel+'-login').classList.toggle('active',tab==='login');
+  document.querySelectorAll('#'+panel+' .tab')
+    .forEach((t,i)=>t.classList.toggle('active', i === (tab==='signup'?0:1)));
+};
+
+/* ================= FCM TOKEN ================= */
+async function getFCMToken(){
+  try{
+    const permission = await Notification.requestPermission();
+    if(permission !== "granted") return null;
+
+    const token = await getToken(messaging,{ vapidKey: VAPID_KEY });
+    return token;
+  }catch(err){
+    console.log("FCM error",err);
+    return null;
+  }
+}
+
+/* ================= SIGNUP ================= */
+async function signupUser(type,data){
+  try{
+    const res = await fetch(`${SERVER_URL}/api/signup`,{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({...data,role:type})
+    });
+    const json = await res.json();
+    if(json.success){
+      localStorage.setItem("token",json.token);
+      localStorage.setItem("userId",json.userId);
+      localStorage.setItem("role",type);
+      alert(type+" signup success");
+      window.location.href = type+".html";
+    }else alert(json.message);
+  }catch(err){ alert("Server error: "+err.message); }
+}
+
+/* ================= LOGIN + FCM ================= */
+async function loginUser(type,mobile,password){
+  try{
+    const res = await fetch(`${SERVER_URL}/api/login`,{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({mobile,password,role:type})
+    });
+    const json = await res.json();
+    if(!json.success) return alert(json.message);
+
+    localStorage.setItem("token",json.token);
+    localStorage.setItem("userId",json.userId);
+    localStorage.setItem("role",type);
+
+    /* 🔥 FCM TOKEN SEND */
+    const fcmToken = await getFCMToken();
+    if(fcmToken){
+      await fetch(`${SERVER_URL}/api/notifications/saveToken`,{
+        method:'POST',
+        headers:{'Content-Type':'application/json'},
+        body:JSON.stringify({
+          userId: json.userId,
+          role: type,
+          fcmToken
+        })
+      });
+    }
+
+    window.location.href = type+".html";
+  }catch(err){ alert("Server error: "+err.message); }
+}
+
+/* ================= BUTTON HANDLERS ================= */
+['wholesaler','retailer','delivery','admin'].forEach(type=>{
+  document.querySelector(`#${type}-signup .submit`).onclick=()=>{
+    let data={};
+    document.querySelectorAll(`#${type}-signup input, #${type}-signup select`).forEach(i=>{
+      let key=i.placeholder?i.placeholder.replace(/ /g,'_').toLowerCase():"vehicle";
+      data[key]=i.value;
+    });
+    if(data.password!==data.confirm_password){
+      alert('Password mismatch'); return;
+    }
+    signupUser(type,data);
+  };
+
+  document.querySelector(`#${type}-login .submit`).onclick=()=>{
+    let inputs=document.querySelectorAll(`#${type}-login input`);
+    loginUser(type,inputs[0].value,inputs[1].value);
+  };
+});
 </script>  </body>  
 </html>
