--- a/index.html
+++ b/index.html
@@ -148,7 +148,22 @@ const VAPID_KEY = "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm
 
 /* ================= SERVER ================= */
 const SERVER_URL = "https://shopbacked-vmhs.onrender.com";
+async function requestNotificationPermission() {
+  if (!("Notification" in window)) {
+    alert("This browser does not support notifications");
+    return false;
+  }
 
+  const permission = await Notification.requestPermission();
+
+  if (permission === "granted") {
+    console.log("✅ Notification permission granted");
+    return true;
+  } else {
+    console.warn("❌ Notification permission denied");
+    return false;
+  }
+    }
 /* ================= UI ================= */
 window.onload = ()=> showPanel('wholesaler');
 
